--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,8 @@
     background: #ddd;
     margin-top: 20px;
 }
+
+body {
+    background-color: #cffffd;
+    font-family: Arial;
+}
